# python-kconv

./: .python-kconv.prcs_aux  ChangeLog  LICENCE.EUC  MANIFEST.in  Makefile.in  README.EUC  README.en_with_EUC_JP  configure.h.in  configure.in  defaults.py  python-kconv.prj  setup.py
kconv/: __init__.py  defaults.py  kconvtools.py
src/: Makefile.in  _kconv.cpp  array.cpp  array.h  checker.cpp  checker.h  commonop.h  crl.cpp  crl.h  inputer.cpp  inputer.h  kconv.cpp  kconv.h  kstring.cpp  kstring.h  outputer.cpp  outputer.h
